stable version with new features
